# poc-click-poetry

./: .gitignore  Makefile
random-cli/: Makefile  pyproject.toml
random-cli-framework/: Makefile  pyproject.toml
random-cli-framework/random_cli_framework/: logic.py
random-cli-framework/tests/: test_random_cli_framework.py
random-cli/random_cli/: cmd.py
random-cli/tests/: test_random_cli.py
