[tool.poetry]
name = "random-cli-framework"
version = "0.1.0"
description = ""
authors = ["viniciussousazup <vinicius.sousa@zup.com.br>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
